fixed visibility added red logo and made text darker

--- a/src/app/shared/footer/footer.scss
+++ b/src/app/shared/footer/footer.scss
@@ -27,6 +27,7 @@
   padding: 0;
 
   a {
+    color: rgba(0,0,0,.87);
     font-size: 16px;
     padding: 0;
     text-decoration: none;
